refactor(jikkou): refactor the internal change api